# robust_control_in_windfield

./: README.md
quadcopter_gazebo/: CMakeLists.txt  README.md  package.xml
quadcopter_gazebo/launch/: test.launch  uav.launch
quadcopter_gazebo/msg/: CMakeLists.txt  SendActuator.msg
quadcopter_gazebo/src/: publish_actuators.cpp  testing.py
quadcopter_matlab/: Test_1_2018a.mdl  lqrparameters.m
quadcopter_python/: geometriccontroller.py  lqrcontroller.py  mpccontroller.py  pidcontroller.py  plotting.py  runsim.py  slidingmodecontrol.py  smccontroller.py  windfield.py
quadcopter_python/model/: params.py  quadcopter.py
quadcopter_python/utils/: quadPlot.py  quaternion.py  trajGen.py  trajGen3D.py  utils.py
